--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,17 @@
   "description": "Compass - A crowd-sourced local business review and social networking site",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "SET NODE_ENV=development & nodemon index.js",
+    "prod" : "SET NODE_ENV=production & node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
