--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 APP_NAME = Compass
 MONGO_CONNECTION_STRING = mongodb://localhost:27017/Compass
 PORT = 5000
+JWT_SECRET = OviPoddar-PrantikPaul-TanvirRaihan
