--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "express-validator": "^6.14.2",
+    "framer-motion": "^6.4.3",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.4.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
