--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6.4.3",
     "jsonwebtoken": "^8.5.1",
     "mdb-react-ui-kit": "^4.1.0",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
