--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/styles": "^5.9.2",
+    "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "express-validator": "^6.14.2",
+    "firebase": "^9.9.2",
     "framer-motion": "^6.4.3",
     "jsonwebtoken": "^8.5.1",
     "mdb-react-ui-kit": "^4.1.0",
@@ -25,10 +27,13 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.34.0",
+    "react-hook-form-mui": "^5.3.2",
     "react-icons": "^4.4.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-step-progress-bar": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
