--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.34.0",
     "react-hook-form-mui": "^5.3.2",
     "react-icons": "^4.4.0",
+    "react-loading-dot": "^1.0.6",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
