--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "date-fns": "^2.29.2",
     "dotenv": "^16.0.1",
     "express-validator": "^6.14.2",
     "firebase": "^9.9.2",
