--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "date-fns": "^2.29.2",
+    "DatePicker": "^2.0.0",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "express-validator": "^6.14.2",
     "firebase": "^9.9.2",
